# fold-webapp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOY.md  Dockerfile  Makefile  Procfile  README.md  TODO.md  WORKPLAN.md  af3_web_app.py  alembic.ini  deploy.sh  docker-compose.yml  env.example  fold_webapp.db  manage.py  pyproject.toml  requirements.txt  slurm.py
api/: README.md  admin.py  auth.py  models.py  urls.py  views.py
api/migrations/: 0001_initial.py
bioportal/: forms.py  settings.py  urls.py  wsgi.py
console/: admin.py  apps.py  decorators.py  models.py  tests.py  urls.py
console/migrations/: 0001_add_userquota.py  0002_add_sitesettings_runnerconfig.py  0003_add_runnerconfig_resource_fields.py  0004_historicaluserquota_api_enabled_and_more.py
console/services/: __init__.py  cleanup.py  jobs.py  monitoring.py  quota.py
console/views/: __init__.py  audit.py  cleanup.py  dashboard.py  jobs.py  monitoring.py  settings.py  stats.py  users.py
containers/: README.md
containers/bindcraft/: Dockerfile
containers/boltz2/: Dockerfile
jobs/: admin.py  apps.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
model_types/: __init__.py  base.py  bindcraft.py  boltz2.py  boltzgen.py  chai1.py  ligand_mpnn.py  parsers.py  protein_mpnn.py  registry.py  rfdiffusion.py  rfdiffusion3.py  runner.py  tests.py
runners/: __init__.py  alphafold.py  bindcraft.py  boltz.py  boltzgen.py  chai.py  ligandmpnn.py  rfdiffusion.py  rfdiffusion3.py  tests.py
scripts/: PREWARM_README.md  SLURM_README.md  backup.sh  build_image.sh  create_admin.py  download_weights.sh  init_db.py  prewarm.sh  restore.sh  setup-slurm.sh
(+76 files in other folders)
